--- a/main.css
+++ b/main.css
@@ -22,23 +22,16 @@
 }
 
 #courses-container .course-text-visible {
-  opacity: 1;
+  display:block;
   width: 300px;
   background-color: #ffffff;
   position: absolute;
   padding: 10px;
-  -webkit-transition: opacity 0.2s ease-in-out;
-  -moz-transition: opacity 0.2s ease-in-out;
-  -o-transition: opacity 0.2s ease-in-out;
-  -ms-transition: opacity 0.2s ease-in-out;
-  transition: opacity 0.2s ease-in-out;
   -moz-box-shadow:    3px 3px 5px 6px #ccc;
   -webkit-box-shadow: 3px 3px 5px 6px #ccc;
   box-shadow:         3px 3px 5px 6px #ccc;
 }
 
 #courses-container .course-text-hidden {
-  opacity: 0;
-  width: 0px;
-  height: 0px;
+  display: none;
 }
